k8s/sn-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sn-server-deployment
  labels:
    app: sn-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sn-server
  template:
    metadata:
      labels:
        app: sn-server
    spec:
      containers:
      - name: sn-server
        image: squiggsnet/sn-server
        resources:
          requests:
            memory: 128Mi
            cpu: 750m
          limits:
            memory: 512Mi
            cpu: "1"
        ports:
        - containerPort: 4000
