k8s/sn-app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sn-app-ingress
  namespace: prod
spec:
  # tls:
  # - hosts:
  #   - app.squiggs.net
  #   secretName: squiggsnet-secret-tls
  rules:
  - host: app.squiggs.net
    http:
      paths:
      - backend:
          serviceName: sn-web-service
          servicePort: sn-web-port
  - host: sn-api.squiggs.net
    http:
      paths:
      - backend:
          serviceName: user-server-service
          servicePort: user-server-prt
